2006-04-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd.hrl: release 1.1.1
	* doc/version.tex: Likewise
	* doc/guide.tex: Likewise

2006-04-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/cyrsasl.erl: Bugfix: anonymous authentication was always
	enabled

2006-04-27  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_ctl.erl: The status now only returns "started" if
	ejabberd is started and ready to accept requests.

2006-04-24  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Added a documentation for max_stanza_size option

2006-04-24  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd.hrl: Updated for version 1.1.0.

2006-04-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/configure: Removed '==' bashism (thanks to Magnus Henoch)
	* src/aclocal.m4: Likewise

	* src/ejabberd_c2s.erl: Resend messages when leaving negative
	presence state (thanks to Magnus Henoch)

2006-04-23  Mickael Remond  <mickael.remond@process-one.net>

	* src/msgs/fr.msg: Updated
	* src/msgs/de.msg: Updated (thanks to Nikolaus Polak)
	* src/ejabberd_sm.erl: Now delivering messages to all resources with
	max equal priority when this priority is non-negative.

	* src/guide.tex: Added documentation for native database configuration.

2006-04-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pt-br.msg: Updated (thanks to Lucius Curado)

	* src/xml_stream.erl: Support for stanza size limit (thanks to
	Igor Goryachev)
	* src/ejabberd_receiver.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_s2s_in.erl: Likewise
	* src/ejabberd.cfg.example: Updated

	* src/ejabberd_auth.erl: Fixed try_register/3 behaviour

2006-04-20  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd.cfg.example: Update of the example for anonymous.
	Removed unnecessary parameter.
	* src/ejabberd_auth_anonymous.erl: Removed unnecessary parameter /
	bugfix.
	* src/ejabberd_auth.erl: Bugfix: We now are forced to check is an